Added rate game API
